--- a/html/card.html
+++ b/html/card.html
@@ -10,7 +10,8 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>TSB Contact</title>
+
+    <title>TSB Card</title>
 </head>
 
 <body>
@@ -23,8 +24,8 @@
         <nav>
             <ul>
                 <li><a href="/index.html" class="active">HOME</a></li>
-                <li><a href="./menu.html">MENU</a></li>
-                <li><a href="./contact.html">CONTACT</a></li>
+                <li><a href="/html/menu.html">MENU</a></li>
+                <li><a href="/html//contact.html">CONTACT</a></li>
             </ul>
         </nav>
 
@@ -35,19 +36,9 @@
     </header>
     <!-- Header End -->
     <!-- Main Start -->
-    <main class="pt-10 px-4 bg-[var(--background-light-color)] dark:bg-[var(--background-light-color)]">
-        <section class="min-h-screen flex items-center justify-center py-10">
-            <div class="flex items-start justify-center max-md:flex-wrap max-w-5xl w-full p-10 gap-10">
-                <!-- Left side -->
-                <div class="w-full md:w-3/4">
-                    <h2 class="heading-text">Contact <span>Us</span></h2>
-                    <p class="main-p">We’d love to hear from you. Fill out the form and we’ll be in touch!</p>
-                    <div id="contact-icons" class="flex gap-5 text-2xl text-[var(--p-color)] dark:text-[var(--p-color)] mt-5"></div>
-                </div>
-
-                <!-- Right Side -->
-                <form id="contact-form" class="w-full"></form>
-            </div>
+    <main class="pt-10 px-6 bg-[var(--background-light-color)] dark:bg-[var(--background-dark-color)] min-h-screen">
+        <section class="max-w-6xl mx-auto py-14">
+            <div id="cartContainer" class="max-w-4xl mx-auto p-6"></div>
         </section>
     </main>
     <!-- Main End -->
@@ -72,6 +63,6 @@
     <!-- Footer End -->
 </body>
 <script src="/js/main.js"></script>
-<script src="/js/contact.js"></script>
+<script src="/js/card.js"></script>
 
 </html>
