--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <nav>
             <ul>
                 <li><a href="/index.html" class="active">HOME</a></li>
-                <li><a href="#menu">MENU</a></li>
-                <li><a href="/html/contact.html">CONTACT</a></li>
+                <li><a href="/html/menu.html">MENU</a></li>
+                <li><a href="/html//contact.html">CONTACT</a></li>
             </ul>
         </nav>
 
         <div class="icons">
-            <i class="fa-solid fa-cart-shopping"></i>
+            <a href="/html/card.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <i class="fa-solid fa-moon" id="theme-toggle"></i>
         </div>
     </header>
@@ -83,9 +83,9 @@
             <div class="menu-container">
                 <div class="menu-text">
                     <h2 class="heading-text">On the <br><span>Menu</span></h2>
-                    <button class="btn">View full menu</button>
+                    <button class="btn"><a href="/html/menu.html">View All menu</a></button>
                 </div>
-                <div  class="menu-img-container" id="menu-container"></div>
+                <div class="menu-img-container" id="menu-container"></div>
             </div>
         </section>
         <!-- Menu Section -->
